--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "phpunit/phpunit": "^9.2"
     },
     "autoload": {
-        "psr-4": {"Roolith\\": "src/"}
+        "psr-4": {"Roolith\\Event\\": "src/"}
     },
-    "version": "1.0.0"
+    "version": "1.0.1"
 }
